<resources>
    <string name="app_name">eyechart</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="activate_your_device">Activate Your Device</string>
    <string name="step_one">Step 1.</string>
    <string name="from_your_mobile_device_or_computer_visit">From your mobile device or computer, visit:</string>
    <string name="log_in_with_your_account_credentials">Log In with your account credentials.</string>
    <string name="step_two">Step 2.</string>
    <string name="enter_the_code">Enter the code:</string>
    <string name="step_3">Step 3.</string>
    <string name="scan_code">Or scan this code:</string>
    <string name="login_barcode">login barcode</string>
    <string name="sign_out">Sign Out</string>
</resources>