<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:orientation="vertical"
    tools:context=".presentation.authentication.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/steps_linear_lay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activate_your_device"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <View
                android:layout_width="37.5dp"
                android:layout_height=".5dp"
                android:alpha="1"
                android:background="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:alpha=".3"
                android:background="@color/white" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/steps_linear_lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_one"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/from_your_mobile_device_or_computer_visit"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:layout_marginTop="7dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/url_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#6096ff"
                android:textSize="15sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_two"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/log_in_with_your_account_credentials"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_3"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/enter_the_code"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/pin_txt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/box_background"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/pin_txt_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/box_background"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:textColor="@color/white"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/pin_txt_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/box_background"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:textColor="@color/white"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/pin_txt_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/box_background"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:textColor="@color/white"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/pin_txt_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/box_background"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/pin_txt_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/box_background"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/qr_linear_lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_code"
            android:textSize="12sp" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/barcode_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:contentDescription="@string/login_barcode"
            android:padding="4dp"
            app:round="7dp"
            tools:src="@drawable/qr_tst_img" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/steps_linear_lay">

        <View
            android:layout_width="37.5dp"
            android:layout_height=".5dp"
            android:alpha="1"
            android:background="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:alpha=".3"
            android:background="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>